# MaterialStudies

./: .gitignore  README.md  keep_detector.py  keep_detectors.py  make_dd4hep.sh  material_recording.py  plotMaterial.py  run_geantino.sh  setup.cfg
.github/workflows/: publish-to-eos.yml
MaterialStudies/: config.py  style.py
runconfigs/: MuColl_10TeV_v0A_all.yaml  MuColl_10TeV_v0A_id.yaml  MuColl_v1_all.yaml  MuColl_v1_id.yaml  MuSIC_v1_all.yaml  MuSIC_v1_id.yaml  all.yaml  id.yaml  keep_generic.yaml
