[metadata]
name = MaterialStudies
version = 0.0.1
url = https://github.com/kkrizka/MaterialStudies
description = Scripts for studying the material of the Muon Collider Detector.
long_description = file: README.md
long_description_content_type = text/markdown
author = Karol Krizka
author_email = kkrizka@gmail.com
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	    Operating System :: OS Independent

[options]
scripts =
	keep_detector.py
	plotMaterial.py
packages =
	 MaterialStudies
install_requires =
	kkconfig

